fix(core-hairline-divider): prevent from becoming invisible on zoom out

--- a/src/components/Dividers/HairlineDivider/HairlineDivider.modules.scss
+++ b/src/components/Dividers/HairlineDivider/HairlineDivider.modules.scss
@@ -3,6 +3,9 @@
 .reset {
   composes: noSpacing from '../../Spacing.modules.scss';
   composes: none from '../../Borders.modules.scss';
+
+  // Prevent subpixel rendering problems in Chrome
+  transform: rotate(-0.00001deg);
 }
 
 .horizontal {
